optimized jpeg and svg images

--- a/index.html
+++ b/index.html
@@ -22,18 +22,8 @@
           <li class="category-list-item">
             <a class="category-link" href="./another-page.html"
               >Для мужчин
-              <svg
-                class="category-icon svg"
-                width="8"
-                height="8"
-                viewBox="0 0 5 4"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M2.5 4L0.334936 0.25L4.66506 0.25L2.5 4Z"
-                  fill="#212121"
-                />
+              <svg class="category-icon">
+                <use href="./img/sprite.svg#icon-triangl"></use>
               </svg>
             </a>
             <ul class="sub-list">
@@ -51,18 +41,8 @@
           <li class="category-list-item">
             <a class="category-link" href="./another-page.html">
               Для женщин
-              <svg
-                class="category-icon svg"
-                width="7"
-                height="7"
-                viewBox="0 0 5 4"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M2.5 4L0.334936 0.25L4.66506 0.25L2.5 4Z"
-                  fill="#212121"
-                />
+              <svg class="category-icon">
+                <use href="./img/sprite.svg#icon-triangl"></use>
               </svg>
             </a>
             <ul class="sub-list">
@@ -80,18 +60,8 @@
           <li class="category-list-item">
             <a class="category-link" href="./another-page.html">
               Для детей
-              <svg
-                class="category-icon svg"
-                width="7"
-                height="7"
-                viewBox="0 0 5 4"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M2.5 4L0.334936 0.25L4.66506 0.25L2.5 4Z"
-                  fill="#212121"
-                />
+              <svg class="category-icon">
+                <use href="./img/sprite.svg#icon-triangl"></use>
               </svg>
             </a>
             <ul class="sub-list">
@@ -107,14 +77,11 @@
             </ul>
           </li>
         </ul>
-        <a class="logo" href="./index.html"
-          ><img
-            class="logo-icon"
-            src="./img/logo.svg"
-            width="40"
-            height="40"
-            alt="logo-icon"
-          /><span class="logo-text">the loop</span></a
+        <a class="logo" href="./index.html">
+          <svg class="logo-icon">
+            <use href="./img/sprite.svg#icon-logo"></use>
+          </svg>
+          <span class="logo-text">the loop</span></a
         >
         <ul class="service-list">
           <li class="service-list-item">
@@ -125,28 +92,11 @@
           </li>
         </ul>
         <a class="basket-link" href="./another-page.html">
-          <svg
-            class="basket-image"
-            width="30"
-            height="30"
-            viewBox="0 0 30 30"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M22.2936 11.4909L16.2385 2.40831C15.9632 2.13308 15.5505 1.85785 15.1376 1.85785C14.7248 1.85785 14.3119 1.99546 14.0367 2.40831L7.98165 11.4909H1.37615C0.550459 11.4909 0 12.0413 0 12.867C0 13.0046 0 13.1423 0 13.2799L3.44037 26.078C3.7156 27.179 4.81651 28.1423 6.05505 28.1423H23.945C25.1835 28.1423 26.2844 27.3166 26.5596 26.078L30 13.2799C30 13.1423 30 13.0046 30 12.867C30 12.0413 29.4495 11.4909 28.6239 11.4909H22.2936ZM11.0092 11.4909L15.1376 5.43583L19.2661 11.4909H11.0092ZM15.1376 22.5001C13.6239 22.5001 12.3853 21.2615 12.3853 19.7478C12.3853 18.234 13.6239 16.9955 15.1376 16.9955C16.6514 16.9955 17.8899 18.234 17.8899 19.7478C17.8899 21.2615 16.6514 22.5001 15.1376 22.5001Z"
-              fill="#212121"
-            />
+          <svg class="basket-image">
+            <use href="./img/sprite.svg#icon-basket"></use>
           </svg>
-          <svg
-            class="basket-text-icon svg"
-            width="5"
-            height="5"
-            viewBox="0 1 5 5"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path d="M2.5 4L0.334936 0.25L4.66506 0.25L2.5 4Z" fill="#212121" />
+          <svg class="basket-text-icon">
+            <use href="./img/sprite.svg#icon-triangl"></use>
           </svg>
           <span class="basket-text">5</span></a
         >
@@ -168,7 +118,7 @@
             <div class="advertising-item">
               <img
                 class="example-image"
-                src="./img/running_shoes.jpg"
+                src="./img/running_shoes.png"
                 width="556"
                 alt="example-image"
               />
@@ -188,7 +138,7 @@
             <div class="advertising-item">
               <img
                 class="example-image"
-                src="./img/t-shirt-cream.jpg"
+                src="./img/t-shirt.png"
                 width="556"
                 alt="example-image"
               />
@@ -237,7 +187,7 @@
               <a class="button arrow" href="./another-page.html">&#8594;</a>
               <img
                 class="article-image"
-                src="./img/man.jpg"
+                src="./img/man.png"
                 width="190"
                 alt="man-image"
               />
@@ -250,7 +200,7 @@
               <a class="button arrow" href="./another-page.html">&#8594;</a>
               <img
                 class="article-image"
-                src="./img/woman.jpg"
+                src="./img/woman.png"
                 width="190"
                 alt="woman-image"
               />
@@ -267,16 +217,16 @@
                     width="277"
                     alt="t-shirt-image"
                   />
-                  <h3 class="clothes-title">Футболка, # 0001</h3></a
-                >
+                  <h3 class="clothes-title">Футболка, # 0001</h3>
+                </a>
                 <a class="clothes-link" href="./another-page.html"
                   ><img
                     src="./img/t-shirt-cream.jpg"
                     width="277"
                     alt="t-shirt-image"
                   />
-                  <h3 class="clothes-title">Футболка, # 0002</h3></a
-                >
+                  <h3 class="clothes-title">Футболка, # 0002</h3>
+                </a>
               </li>
               <li class="clothes-list-item">
                 <a class="clothes-link" href="./another-page.html"
@@ -285,16 +235,16 @@
                     width="277"
                     alt="t-shirt-image"
                   />
-                  <h3 class="clothes-title">Футболка, # 0003</h3></a
-                >
+                  <h3 class="clothes-title">Футболка, # 0003</h3>
+                </a>
                 <a class="clothes-link" href="./another-page.html"
                   ><img
                     src="./img/t-shirt-cream.jpg"
                     width="277"
                     alt="t-shirt-image"
                   />
-                  <h3 class="clothes-title">Футболка, # 0004</h3></a
-                >
+                  <h3 class="clothes-title">Футболка, # 0004</h3>
+                </a>
               </li>
             </ul>
             <ul class="clothes-list">
@@ -313,8 +263,8 @@
                     width="277"
                     alt="t-shirt-image"
                   />
-                  <h3 class="clothes-title">Футболка, # 1002</h3></a
-                >
+                  <h3 class="clothes-title">Футболка, # 1002</h3>
+                </a>
               </li>
               <li class="clothes-list-item">
                 <a class="clothes-link" href="./another-page.html"
@@ -323,16 +273,16 @@
                     width="277"
                     alt="t-shirt-image"
                   />
-                  <h3 class="clothes-title">Футболка, # 1003</h3></a
-                >
+                  <h3 class="clothes-title">Футболка, # 1003</h3>
+                </a>
                 <a class="clothes-link" href="./another-page.html"
                   ><img
                     src="./img/t-shirt-cream.jpg"
                     width="277"
                     alt="t-shirt-image"
                   />
-                  <h3 class="clothes-title">Футболка, # 1004</h3></a
-                >
+                  <h3 class="clothes-title">Футболка, # 1004</h3>
+                </a>
               </li>
             </ul>
           </div>
@@ -348,7 +298,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -365,7 +315,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -382,7 +332,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -399,7 +349,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -444,7 +394,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -461,7 +411,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -478,7 +428,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -495,7 +445,7 @@
               <a class="models-link" href="./another-page.html"
                 ><img
                   class="models-model-image"
-                  src="./img/model.jpg"
+                  src="./img/model.png"
                   width="205"
                   alt="model-image"
                 />
@@ -521,14 +471,11 @@
       <section class="black-section">
         <div class="container foot-first-level">
           <div class="foot-logo-box">
-            <a class="logo foot-logo" href="./index.html"
-              ><img
-                class="logo-icon"
-                src="./img/logo.svg"
-                width="40"
-                height="40"
-                alt="logo-icon"
-              /><span class="logo-text">the loop</span></a
+            <a class="logo foot-logo" href="./index.html">
+              <svg class="logo-icon">
+                <use href="./img/sprite.svg#icon-logo"></use>
+              </svg>
+              <span class="logo-text">the loop</span></a
             >
             <p class="logo-description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
@@ -604,7 +551,9 @@
                 <li class="inner-list-item">
                   <a class="social-link foot-link" href="https://vk.com/"
                     ><div class="ico-box">
-                      <img src="./img/vk.svg" alt="vk-ico" />
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-vk"></use>
+                      </svg>
                     </div>
                     <h3 class="social-link-title">VK.com</h3></a
                   >
@@ -614,7 +563,9 @@
                     class="social-link foot-link"
                     href="https://www.facebook.com/"
                     ><div class="ico-box">
-                      <img src="./img/fb.svg" alt="fb-ico" />
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-fb"></use>
+                      </svg>
                     </div>
                     <h3 class="social-link-title">Facebook</h3>
                   </a>
@@ -624,7 +575,9 @@
                     class="social-link foot-link"
                     href="https://www.instagram.com/"
                     ><div class="ico-box">
-                      <img src="./img/insta.svg" alt="insta-ico" />
+                      <svg class="social-icon">
+                        <use href="./img/sprite.svg#icon-insta"></use>
+                      </svg>
                     </div>
                     <h3 class="social-link-title">Instagram</h3>
                   </a>
